--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,15 @@ flutter:
   assets:
     - assets/images/dog1.png
     - assets/images/walkgroup1.png
+    - assets/images/walkgroup2.png
+    - assets/images/find1.png
+    - assets/images/find2.png
+    - assets/images/find3.png
+    - assets/images/find4.png
+    - assets/images/find5.png
+    - assets/images/find6.png
+    - assets/images/find7.png
+    - assets/images/find8.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
